<resources>
    <string name="app_name">Ajoyib retseptlar</string>
    <string name="today_recipe">Kun retsepti</string>
    <string name="all_recipes">Barcha retseptlar</string>
    <string name="demo_title">Mayiz va yong`oqli apelsinli keks</string>
    <string name="demo_description">Ushbu yong’oq va mayizli, apelsin iforli keks juda lazzatlidir. Salqin kechalarda bir piyola choy bilan mukammaldir. Mayiz o’rniga boshqa quruq mevalarni solish mumkin, yong’oqlarni esa maydalash kerak emas, kattaroq bo’laklari…</string>
    <!--    <string name="daqiqa">daqiqa</string>-->
    <!--    <string name="soat">soat</string>-->
    <string name="daqiqa"> m. </string>
    <string name="soat"> h. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="category">Toifa</string>
    <string name="ingredients">Mahsulotlar</string>
    <string name="details">Qadamlar</string>
    <string name="mahsulotlar"> ta mahsulot</string>
    <string name="jarayon"> ta qadam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_description"><h2>Ajoyib retsept</h2>
<p>
  Ushbu dastur GITA dasturchilar akademiyasi BootCamp4 guruhi o‘quvchisi tomonidan,
  darslarda berilgan vaizfalar asosida ishlab chiqildi. Dasturda ishlatilgan texnologiyalar:
</p>
<ul>
  <li>Room</li>
  <li>Glide</li>
  <li>Navigation components</li>
  <li>Lottie</li>
  <li>EventBus</li>
</ul>
<h2>Foydalanilgan manbaalar</h2>
<p>
  Dasturda ishlatilgan ma`lumotlar  <a href="https://zira.uz/uz/t/turk-oshxonasi/">zira.uz</a>
  web sahifasidan beg`araz olindi.
</p>
<h2>Biz bilan bog`lanish</h2>
<dl>
  <dt>Telegram</dt>
  <dd>
   <a href="https://t.me/gitauz">GITA dasturchilar akademiyasining telegram sahifasi</a>
  </dd>
  <dt>YouTube</dt>
  <dd>
  <a href="https://www.youtube.com/@gitauzofficial">GITA dasturchilar akademiyasining You Tube sahifasi</a>
  </dd>
  <dt>Dasturchi</dt>
  <dd>
   <a href="https://t.me/Ax1234321">Zokirov Shukrullo</a>
  </dd>
</dl>
<h2>Kelgusida</h2>
<p>
  Dasturda aniqlangan kamchiliklar, xatoliklar yuzasaidan bizga murojaat qiling. Biz albatta sizning murojaatingizni inobatga olamiz.Dasturning kelgusi nashrlarida aniqlangan noqulayliklarni bartaraf etishga va ma`lumorlat bazasini boyitishga harakat qilamiz.
</p>
<h2>E`tiboringiz uchun raxmat!</h2>
    </string>
    <string name="start_cooking_nfrom_today">Taom tayyorlashni\nbugundan boshlang</string>
    <string name="get_started">Olg‘a</string>
    <string name="_9_items">9 Items</string>
    <string name="ma_lumot_mavjud_emas">Ma`lumot mavjud emas!</string>
    <string name="indian_food">Indian food</string>
    <string name="_4_9">4.9</string>
</resources>