<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/card_corner_button"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_itemRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_menu" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    app:cardCornerRadius="15dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#80FFFFFF"
                    app:cardElevation="0.3dp"
                    tools:ignore="RtlHardcoded">
                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingVertical="6dp"
                android:paddingHorizontal="16dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/iv_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_star_24"
                    android:tint="@color/icon_star"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_ratingItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_middleTwoView"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="6dp"
                    android:text="@string/_4_9"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/text_size_item_description"
                    app:layout_constraintLeft_toLeftOf="@id/iv_star"
                    app:layout_constraintRight_toRightOf="@id/iv_star"
                    app:layout_constraintTop_toBottomOf="@id/iv_star" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemTitle"
                    android:text="@string/demo_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/iv_star"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/ItemTitleTextStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_item_small"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_itemTitle">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="3dp"
                        android:scaleType="centerCrop"
                        android:gravity="center"
                        android:src="@drawable/ic_baseline_access_time_24"
                        android:tint="@color/text_description_black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_timePrepareHour"
                        android:textSize="@dimen/text_size_item_description"
                        style="@style/TextStyleItemDescription" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/hourText"
                        android:textSize="@dimen/text_size_item_description"
                        style="@style/TextStyleItemDescription"
                        android:text="@string/soat" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_timePrepareMinute"
                        style="@style/TextStyleItemDescription"
                        android:textSize="@dimen/text_size_item_description"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/minuteText"
                        android:textSize="@dimen/text_size_item_description"
                        style="@style/TextStyleItemDescription"
                        android:text="@string/daqiqa" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>