<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meal.MealFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btBack"
            android:layout_width="@dimen/size_small_icon"
            android:layout_height="@dimen/size_small_icon"
            android:layout_margin="@dimen/margin_main"
            app:cardBackgroundColor="@color/selected_category"
            app:cardCornerRadius="@dimen/card_corner_medium"
            app:cardElevation="0.3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="6dp"
                android:paddingStart="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleMeal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingHorizontal="16dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/category"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/text_size_main_title"
            app:layout_constraintBottom_toBottomOf="@id/btBack"
            app:layout_constraintLeft_toRightOf="@id/btBack"
            app:layout_constraintRight_toLeftOf="@id/btLike"
            app:layout_constraintTop_toTopOf="@id/btBack" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btLike"
            android:layout_width="@dimen/size_small_icon"
            android:layout_height="@dimen/size_small_icon"
            android:layout_margin="@dimen/margin_main"
            app:cardBackgroundColor="@color/ingredientsItemBackground"
            app:cardCornerRadius="@dimen/card_corner_medium"
            app:cardElevation="0.3dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_favorite_24"
                app:tint="@color/selected_category" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_main"
            android:layout_marginTop="@dimen/margin_main"
            app:cardCornerRadius="@dimen/card_corner_button"
            app:cardElevation="0.3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/btLike">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagePager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btYouTube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main"
            app:cardCornerRadius="6dp"
            android:visibility="invisible"
            app:cardUseCompatPadding="true"
            app:cardElevation="0.4dp"
            app:layout_constraintBottom_toBottomOf="@id/imageCard"
            app:layout_constraintRight_toRightOf="@id/imageCard">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size_small_icon"
                android:layout_height="@dimen/size_small_icon"
                android:layout_marginHorizontal="3dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/you_tube_logo" />
        </com.google.android.material.card.MaterialCardView>

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/image_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0.4dp"
            app:dotsColor="@color/un_selected_category"
            app:dotsSize="12dp"
            app:layout_constraintBottom_toBottomOf="@id/imageCard"
            app:layout_constraintLeft_toLeftOf="@id/imageCard"
            app:layout_constraintRight_toRightOf="@id/imageCard"
            app:layout_constraintTop_toTopOf="@id/imageCard"
            app:layout_constraintVertical_bias="0.9"
            app:selectedDotColor="@color/selected_category" />

        <LinearLayout
            android:id="@+id/linearClickText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_itemRecipe"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageCard">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btIngredients"
                style="@style/MenuButtonStyle"
                android:layout_width="0dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/ingredients" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btDetails"
                style="@style/MenuButtonStyle"
                android:layout_width="0dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_un_clickable_text"
                android:text="@string/details"
                android:textColor="@color/selected_category" />
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pagerIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_itemRecipe"
            app:layout_constraintTop_toBottomOf="@id/linearClickText" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="0.5dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/menu_text_color"
            android:indeterminateTintMode="src_atop"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>